--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>SRI</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
